# furui

./: CLAUDE.md  Cargo.build-spec.json  Cargo.toml  flake.nix
src/: lib.rs  matcher.rs  score.rs
