[package]
name = "furui"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Furui (篩) — fuzzy matching, scoring, and result ranking engine for Neovim plugins"
homepage = "https://github.com/pleme-io/furui"
repository = "https://github.com/pleme-io/furui"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
keywords = ["neovim", "fuzzy", "search", "filter"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
nvim-oxi = { version = "0.5", features = ["neovim-0-11"] }
